[tool.poetry]
name = "textract-laizee"
version = "1.6.5"
description = "textract with updated dependencies"
authors = ["Henri Werth <henri@laizee.de>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "textract" },
]

[tool.poetry.dependencies]
python = "^3.8"
chardet = "^4.0.0"
six = "^1.12.0"
xlrd = "^1.2.0"
python-pptx = "^0.6.18"
extract-msg = "^0.29"
docx2txt = "^0.8"
beautifulsoup4 = ">=4.8.0"
argcomplete = ">=1.10.0"
"pdfminer.six" = "^20220524"
SpeechRecognition = "^3.8.1"

[tool.poetry.dev-dependencies]
coveralls = "^1.8.2"
nose= "1.3.7"
pycodestyle= "2.5.0"
PyYAML= "^5.1.1"
pytest= "^5.0.1"
requests= "^2.22.0"

# needed for managing versions
bumpversion= "^0.5.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
